@@ -1,3 +1,9 @@
+2020-07-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3079.c:
+	  Fix bug #3079.
+
 2020-07-04 Sergey Belyashov <sergey.belyashov@gmail.com>
 	* src/SDCCpeeph.c
 	  Implement RFE #661: Add newLabel peephole optimizer constraint
